refactor: depend on SagaOrchestrator interface in daemon + tidy naming (PR 0)
Review follow-ups to the api-module reorg:

- SagaResource now takes the SagaOrchestrator interface instead of the
  concrete DefaultSagaOrchestrator. The SagaManager split had downgraded
  this to a concrete dependency; restoring the interface re-establishes the
  DIP seam and gives the extracted interface its first real consumer.
  SagaServer still builds/holds the concrete type (it needs register/
  startBackgroundTasks/close) and widens at the call boundary.

- Rename leftover "sagaManager"/"manager"/"buildManager" identifiers (and
  prose) to "orchestrator"/"buildOrchestrator" across the daemon and tests.
  The SagaRecoveryManager/SagaRetentionManager "manager" variables are left
  as-is (those classes keep the Manager name).

- SagaDefinitionId: restore exact String.isBlank() semantics under
  --release 8 via codePoints().allMatch(Character::isWhitespace). The
  earlier trim().isEmpty() backport accepted Unicode whitespace above
  U+0020 and over-rejected control chars; add U+3000 rejection tests.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>